--- a/quintus/index.html
+++ b/quintus/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 <title>Document</title>
 <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
@@ -13,15 +14,18 @@
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/underscore/underscore-min.js"></script>
+<script src="scripts/inherit.js"></script>
+<script src="scripts/requestAnimationFrame.js"></script>
 <script src="scripts/quintus.js"></script>
 <script>
+
+// 测试游戏循环
 	var TimerTest = Quintus();
 
 	var totalFrames = 0,
 		totalTime = 0;
 
 	// TimerTest.gameLoop(function(dt){
-	// 	console.log(dt);
 	// 	totalTime += dt;
 	// 	totalFrames += 1;
 	// 	$('#timer').text(Math.round(totalTime * 1000) + " MS");
@@ -30,6 +34,39 @@
 
 	$('#pause').on('click', TimerTest.pauseGame);
 	$("#unpause").on('click', TimerTest.unpauseGame);
+
+// 测试Class继承
+	var Person = Class.extend({
+		init: function(){console.log('Created Person')},
+		speak: function(){console.log('Person Speaking')}
+	})
+
+	var p = new Person();
+	p.speak();
+
+	var Guy = Person.extend({
+		init: function(){this._super(); console.log('Created Guy')},
+		speak: function(){this._super(); console.log('I`m a Guy')}
+	})
+	var bob = new Guy();
+	bob.speak();
+
+	// Gril
+	var Gril = Person.extend({
+		init: function(){console.log('Created Gril')},
+		speak: function(){console.log('I`m a Gril')}
+	})
+	var jill = new Gril();
+	jill.speak();
+
+	console.log(bob instanceof Person);		//true
+	console.log(bob instanceof Guy);		//true
+	console.log(bob instanceof Gril);		//false
+	console.log(bob instanceof Person);		//true
+	console.log(bob instanceof Guy);		//false
+	console.log(bob instanceof Gril);		//true
+
+
 </script>
 </body>
 </html>
