--- a/ui-mobile/index.html
+++ b/ui-mobile/index.html
@@ -53,6 +53,18 @@
 		        </div>
 		    </div>
 		</div>
+		<div class="row">
+		    <div class="col-sm-6">
+		        <div class="thumbnail">
+		            <div class="caption">
+		            	<h3>slidelightbox</h3>
+		                <p>
+		                	<a href="slidelightbox.html" class="btn btn-primary" role="button">Button</a>
+		                </p>
+		            </div>
+		        </div>
+		    </div>
+		</div>
 
 	</div>
 
